safari overflow bug fixed

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -15,6 +15,10 @@
   margin: 1rem 0rem;
 }
 
+.content p {
+  display: inline;
+}
+
 .title {
   font-size: 1.5rem;
 }
